--- a/shops/templates/shops/cart.html
+++ b/shops/templates/shops/cart.html
@@ -8,7 +8,9 @@
 {% block breadcrumbs_title %}<h2>Корзина</h2>{% endblock breadcrumbs_title %}
 {% block breadcrumb_element %}<li>Корзина</li>{% endblock %}
 
+
 {% block main %}
+
 <div class="cart">
 		{% if cartitems.forms %}
 		<form method="post" id="cart-form">
@@ -17,74 +19,59 @@
 		{% regroup cartitems|dictsort:"instance.shop_id" by instance.shop_id as item_list %}
 		{% for shop in item_list %}
 		<div class="sixteen columns">
-			<div class="limiter">
-				<div class="container-table100">
-					<div class="wrap-table100">
-						<div class="table table-767">
-							<div class="row header row-767 header-767">
-								<div class="cell cell-767">
-									Товар
-								</div>
-								<div class="cell cell-767">
-									{# Описание #}
-								</div>
-								<div class="cell cell-767">
-									Цена
-								</div>
-								<div class="cell cell-767">
-									Кол-во
-								</div>
-								<div class="cell cell-767">
-									Итого
-								</div>
-								<div class="cell cell-767">
-
-								</div>
+			<table class="table-responsive cart-table" role="table">
+				<thead class="rowgroup" role="rowgroup">
+					<tr class="row" role="row">
+						<th class="columnheader" role="columnheader">Товар</th>
+						<th class="columnheader" role="columnheader"></th>
+						<th class="columnheader" role="columnheader">Цена</th>
+						<th class="columnheader" role="columnheader">Кол-во</th>
+						<th class="columnheader" role="columnheader">Итого</th>
+						<th class="columnheader" role="columnheader"></th>
+					</tr>
+				</thead>
+				<tbody class="rowgroup body-row" role="rowgroup">
+					{% for form in shop.list %}
+					{% with form.instance as item %}
+					<tr class="row" role="row">
+						<td class="cell image" data-title="" role="cell">
+							{{ form.id }}
+							<a href="{{ item.get_absolute_url }}">
+							{% if item.image %}
+								<img alt="{{ item.title|capfirst }}" src="{{ MEDIA_URL }}{% thumbnail item.image 80 80 %}" />
+							{% else %}
+								<i class="fa fa-camera fa-2x" aria-hidden="true"></i>
+							{% endif %}
+							</a>
+						</td>
+						<td class="cell title" data-title="Товар" role="cell">
+							<a href="{{ item.get_absolute_url }}">{{ item.title|capfirst }}</a>
+						</td>
+						<td class="cell" data-title="Цена" role="cell">
+							{{ item.price|rub_currency }}
+						</td>
+						<td class="cell" data-title="Кол-во" role="cell">
+							<div class="quantity-wrapper">
+								{{ form.quantity }}
+							<div class="clearfix"></div>
 							</div>
-							{% for form in shop.list %}
-			        {% with form.instance as item %}
-							<div class="row row-767">
-								<div class="cell cell-767" data-title="Товар">
-									{{ form.id }}
-									<a href="{{ item.get_absolute_url }}">
-									{% if item.image %}
-										<img alt="{{ item.title|capfirst }}" src="{{ MEDIA_URL }}{% thumbnail item.image 60 60 %}" />
-									{% else %}
-									<i class="fa fa-camera fa-2x" aria-hidden="true"></i>
-									{% endif %}
-									</a>
-									{# <a href="{{ item.get_absolute_url }}">{{ item.title|capfirst }}</a> #}
-								</div>
-								<div class="cell cell-767" data-title="">
-									<a href="{{ item.get_absolute_url }}">{{ item.title|capfirst }}</a>
-								</div>
-								<div class="cell cell-767" data-title="Цена">
-									{{ item.price|rub_currency }}
-								</div>
-								<div class="cell cell-767" data-title="Кол-во">
-									<div class="quantity-wrapper">
-										{{ form.quantity }}
-									<div class="clearfix"></div>
-									</div>
-								</div>
-								<div class="cell cell-767" data-title="Итого">
-									{{ item.total_price|rub_currency }}
-								</div>
-								<div class="cell cell-767 delete-input" data-title="">
-									<a href="#" class="cart-remove"></a>
-									<div class="clearfix"></div>
-									{{ form.DELETE }}
-								</div>
-							</div>
-							{% endwith %}
-			        {% endfor %}
-						</div>
-					</div>
-				</div>
-			</div>
+						</td>
+						<td class="cell total" data-title="Итого" role="cell">
+							{{ item.total_price|rub_currency }}
+						</td>
+						<td class="cell action" data-title="" role="cell">
+							<a href="#" class="cart-remove"></a>
+							<div class="clearfix"></div>
+							{{ form.DELETE }}
+						</td>
+					</tr>
+					{% endwith %}
+					{% endfor %}
+				</tbody>
+			</table>
 		</div>
 		<div class="sixteen columns divider">
-			<input type="submit" value="Обновить корзину" class="gray pull-right">
+			<input type="submit" value="Обновить корзину" class="button gray pull-right">
 		</div>
 			{% get_shop_data cart shop_id=shop.grouper as shop_data %}
 			{% for obj in shops %}
@@ -100,6 +87,7 @@
 						</div>
 						<div class="text-content pull-left">
 							<h2><a href="{% url 'shop-view' obj.slug %}">{{ obj.shopname }}</a></h2>
+							<span>{{ obj.user__profile__country__name }}, {{ obj.user__profile__city__name}}</span>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -114,8 +102,11 @@
 							</tr>
 						</tbody>
 					</table>
-					<br>
-					<a href="{% url 'shop-checkout' obj.slug shop.grouper %}" class="calculate-shipping">Оформить заказ <i class="fa fa-arrow-circle-right"></i></a>
+					<p>
+						Вы делаете покупку напрямую в магазине.
+						После того, как магазин свяжется с вами, вы договоритесь о способах оплаты и доставки.
+					</p>
+					<a href="{% url 'shop-checkout' obj.slug shop.grouper %}" class="button procced-to-checkout">Оформить заказ <i class="fa fa-arrow-circle-right"></i></a>
 				</div>
 			{% endif %}
 			{% endfor %}
@@ -126,7 +117,7 @@
 	{% else %}
 	<div class="sixteen columns">
 		<section id="not-found">
-          <p>Ваша корзина пуста.</p>
+          <p>Ваша корзина пуста</p>
       </section>
 	</div>
 	{% endif %}
@@ -134,7 +125,9 @@
 <div class="margin-top-50"></div>
 {% endblock %}
 
+
+
 {% block extra_js %}
  {{ block.super }}
  <script src="{% static 'js/cart_update.js' %}" type="text/javascript"></script>
- {% endblock extra_js %}
+{% endblock extra_js %}
