--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -1995,7 +1995,7 @@ a:hover .checkout-section span {
 .checkout-summary {
     margin-bottom: 20px;
     border-bottom: 1px solid #eee;
-    padding: 0 3px;
+    /* padding: 0 3px; */
 }
 
 .checkout-summary,
@@ -2011,7 +2011,7 @@ a:hover .checkout-section span {
     margin: 0 0 30px 0;
 }
 
-.checkout-content select,
+/* .checkout-content select,
 .checkout-summary select {
     padding: 10px 12px;
     cursor: pointer;
@@ -2022,29 +2022,29 @@ a:hover .checkout-section span {
 .checkout-content input {
     margin: 0 0 15px 0;
     width: 95.4%;
-}
+} */
 
-.checkout-content .half {
+/* .checkout-content .half {
     display: inline-block;
     width: 45.8%;
-}
+} */
 
-.checkout-content .half.first {
+/* .checkout-content .half.first {
     padding: 0 30px 0 0;
-}
-
+} */
+/*
 .checkout-content .fullwidth,
 .checkout-content .fullwidth select,
 .checkout-content select.fullwidth {
     display: inline-block;
     width: 100%;
-}
+} */
 
-.checkout-content input.fullwidth,
+/* .checkout-content input.fullwidth,
 .checkout-content .fullwidth input {
     display: inline-block;
     width: 95%
-}
+} */
 
 a:hover .checkout-section strong {
     color: #fff;
@@ -2089,22 +2089,22 @@ label.checkbox {
     color: #d11c1c;
 }
 
-.checkout-content select,
+/* .checkout-content select,
 .checkout-summary select {
     overflow: hidden;
     background: url(../images/down_arrow_select.png) no-repeat right #f5f5f5;
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
-}
+} */
 
-@-moz-document url-prefix() {
+/* @-moz-document url-prefix() {
     .checkout-content select,
     .checkout-summary select {
         background-image: none;
         padding-right: 20px;
     }
-}
+} */
 
 ul.address-review {
     margin: 10px 0 24px 0;
@@ -2207,7 +2207,7 @@ ul.delivery-options {
 
 .checkout-subtotal span {
     color: #606060;
-    margin-left: 5px;
+    /* margin-left: 5px; */
 }
 
 .payment-icons.checkout {
@@ -3320,10 +3320,13 @@ a.button.color:hover {
     margin: 20px 0 40px 0;
 }
 
+#orders-not-found {
+  margin: 78px 0 60px 0;
+}
 #not-found {
     margin: 90px 0 115px 0;
 }
-
+#orders-not-found h2,
 #not-found h2 {
     text-align: center;
     font-size: 240px;
@@ -3332,6 +3335,7 @@ a.button.color:hover {
     letter-spacing: -5px;
 }
 
+#orders-not-found p,
 #not-found p {
     text-align: center;
     font-size: 32px;
@@ -5063,6 +5067,7 @@ button.mfp-arrow {
     top: 0px;
 }
 
+.modal-dialog,
 #small-dialog {
     background: #fff;
     padding: 30px 40px 35px 40px;
@@ -5072,10 +5077,12 @@ button.mfp-arrow {
     position: relative;
 }
 
+.modal-dialog h3,
 #small-dialog h3 {
     margin-bottom: 20px;
 }
 
+.modal-dialog span.line,
 #small-dialog span.line {
     padding-top: 7px;
 }
@@ -6101,6 +6108,7 @@ ul.footer-links {
   border-bottom: 1px solid #eee;
 }
 
+.default-panel,
 .filter-panel {
   background-color: #fff;
   padding: 10px 20px;
@@ -7328,7 +7336,7 @@ table.cart-table.bottom th {
 }
 .divider {
   background-color: #f6f6f6;
-  border-top: 1px solid #e6e6e6;
+  /* border-top: 1px solid #e6e6e6; */
   padding: 10px;
 }
 .cart-totals .cart-table th {
@@ -8376,7 +8384,9 @@ html[xmlns] .slides {
     transition: all 0.2s ease-in-out;
     color: #888;
 }
-
+.categories li a.active {
+  font-weight: bold;
+}
 .categories li a:hover {
     padding-left: 3px;
     color: #808080!important;
@@ -8421,35 +8431,35 @@ html[xmlns] .slides {
     .product-list span {
         font-size: 14px;
     }
-    .checkout-content .half {
+    /* .checkout-content .half {
         width: 44.5%;
     }
     .checkout-content .half.first {
         padding: 0 30px 0 0;
-    }
-    .checkout-content .fullwidth,
+    } */
+    /* .checkout-content .fullwidth,
     .checkout-content .fullwidth select,
     .checkout-content select.fullwidth {
         width: 100%;
     }
     table.checkout.cart-table td {
         padding: 15px;
-    }
-    .checkout-content select,
+    } */
+    /* .checkout-content select,
     .checkout-content input {
         width: 93.5%;
-    }
-    .checkout-content .half {
+    } */
+    /* .checkout-content .half {
         width: 44.5%;
     }
     .checkout-content .half.first {
         padding: 0 30px 0 0;
-    }
-    .checkout-content .fullwidth,
+    } */
+    /* .checkout-content .fullwidth,
     .checkout-content .fullwidth select,
     .checkout-content select.fullwidth {
         width: 100%;
-    }
+    } */
     .mega-container {
         width: 894px;
     }
@@ -8505,7 +8515,7 @@ html[xmlns] .slides {
     .arrows .with-ul:after {
         right: 13px;
     }
-    .checkout-content select,
+    /* .checkout-content select,
     .checkout-content input {
         width: 92.4%;
     }
@@ -8519,7 +8529,7 @@ html[xmlns] .slides {
     .checkout-content .fullwidth select,
     .checkout-content select.fullwidth {
         width: 100%;
-    }
+    } */
     .hide-on-mobile {
         display: none;
     }
@@ -8717,7 +8727,7 @@ html[xmlns] .slides {
     .cart-list {
         width: 420px;
     }
-    .checkout-content .half {
+    /* .checkout-content .half {
         width: 44%;
     }
     .checkout-content .half.first {
@@ -8731,7 +8741,7 @@ html[xmlns] .slides {
     .checkout-content .fullwidth select,
     .checkout-content select.fullwidth {
         width: 100%;
-    }
+    } */
 }
 
 @media only screen and (max-width: 479px) {
@@ -8747,7 +8757,7 @@ html[xmlns] .slides {
     .cart-list {
         width: 300px;
     }
-    .checkout-content .half {
+    /* .checkout-content .half {
         width: 95%;
     }
     .checkout-content .half.first {
@@ -8757,7 +8767,7 @@ html[xmlns] .slides {
     .checkout-content .fullwidth select,
     .checkout-content select.fullwidth {
         width: 100%;
-    }
+    } */
 }
 
 .profile-image,
