--- a/theme/templates/theme_form/field.html
+++ b/theme/templates/theme_form/field.html
@@ -11,8 +11,6 @@
     {% endif %}
     <{% if tag %}{{ tag }}{% else %}div{% endif %} id="div_{{ field.auto_id }}" {% if not field|is_checkbox %}class="form-group{% else %}class="checkbox{% endif %}{% if wrapper_class %} {{ wrapper_class }}{% endif %}{% if form_group_wrapper_class %} {{ form_group_wrapper_class }}{% endif %}{% if form_show_errors%}{% if field.errors %} has-danger{% endif %}{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
 
-<!-- was here !-->
-
         {% if not field|is_checkboxselectmultiple and not field|is_radioselect %}
             {% if field|is_checkbox and form_show_labels %}
                 <label for="{{ field.id_for_label }}" class="{% if field.field.required %} requiredField{% endif %} control control--checkbox">
@@ -31,10 +29,8 @@
             {% endif %}
         {% endif %}
 
-
-<!-- inserted this !-->
-{% if field.label and not field|is_checkbox and form_show_labels %}
-        <label for="{{ field.id_for_label }}" class="form-control-label {{ label_class }}{% if field.field.required %} requiredField{% endif %}">{{ field.label|safe }}{% if field.field.required %} * {% endif %}</label>
+{% if field.label and not field|is_checkbox and form_show_labels and not field|is_radioselect %}
+  <label for="{{ field.id_for_label }}" class="form-control-label {{ label_class }}{% if field.field.required %} requiredField{% endif %}">{{ field.label|safe }}{% if field.field.required %} * {% endif %}</label>
 {% endif %}
 
 {% if field|is_checkboxselectmultiple %}
@@ -44,8 +40,6 @@
 {% if field|is_radioselect %}
     {% include "theme_form/layout/radioselect.html" %}
 {% endif %}
-<!-- ... !-->
-
 
     </{% if tag %}{{ tag }}{% else %}div{% endif %}>
     {% if field|is_checkbox %}
