--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -609,22 +609,50 @@ figure.blue-effect img {
 	display: inline-block;
 } */
 
-.order-container {
-  overflow: auto
+.order-content {
+  color: #515151;
 }
 
-.order-thumb {
+.order-content h2 {
+  font-weight: 600;
+  color: #616161;
+  margin-bottom: 7px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.order-content p {
+  margin: 0;
+  height: 101px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.order-description div {
+  margin-bottom: 3px;
+  width: 50%;
   float: left;
-  margin: 8px 0
 }
 
-.order-thumb img {
-  display: block;
-  margin-bottom: 8px;
-  width: 200px
+.order-description i {
+    display: inline-block;
+    margin: 2px 5px 0 0;
+    color: #898989;
 }
 
-.text-center, .order-info {
+.reset {
+  margin: 0;
+}
+
+.text-center {
   text-align: center
 }
 
@@ -1323,6 +1351,21 @@ textarea, input[type="text"], input[type="submit"], input[type="password"], [typ
   margin: 0;
 }
 
+.container .order-image.columns {
+    width: 250px;
+    margin: 0;
+}
+
+/* .order .order-image img {
+  margin: 10% auto 0 auto;
+} */
+
+.container .order-content.columns {
+  width: 650px;
+  margin: 0;
+  padding: 10px 20px;
+}
+
 .container .adjust-product.columns {
   width: 290px;
   margin: 0;
@@ -1658,6 +1701,15 @@ span.big-green>span>i {
   .container .adjust-right.columns {
     width: 720px;
   }
+  .container .order-image.columns {
+      width: 200px;
+  }
+  .container .order-content.columns {
+    width: 520px;
+  }
+  .order-content p {
+    height: 51px;
+  }
 }
 
 @media only screen and (min-width: 991px) and (max-width: 1039px) {
@@ -1693,6 +1745,15 @@ span.big-green>span>i {
   }
   .container .adjust-right.columns {
     width: 720px;
+  }
+  .container .order-image.columns {
+      width: 200px;
+  }
+  .container .order-content.columns {
+    width: 520px;
+  }
+  .order-content p {
+    height: 51px;
   }
 }
 
@@ -1757,6 +1818,15 @@ span.big-green>span>i {
   }
   .container .adjust-product.columns {
     width: 246px;
+  }
+  .container .order-image.columns {
+      width: 200px;
+  }
+  .container .order-content.columns {
+    width: 568px;
+  }
+  .order-content p {
+    height: 51px;
   }
 }
 
@@ -1840,6 +1910,34 @@ span.big-green>span>i {
     margin-top: 0;
     display: none;
   }
+  .orders .order:nth-child(odd) {
+    margin-left: 0;
+    margin-right: 5px;
+  }
+  .orders .order:nth-child(even) {
+    margin-left: 5px;
+    margin-right: 0
+  }
+  .order-content h2 {
+    white-space: inherit;
+  }
+  .order-description div {
+    width: auto;
+    float: inherit;
+  }
+  .container .order-content.columns {
+    padding: 5px 10px 10px 12px;
+  }
+  .order-content p {
+    height: auto;
+    overflow: inherit;
+  }
+  /* .container .order-image.columns {
+      width: auto;
+  }
+  .container .order-content.columns {
+    width: auto;
+  } */
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
@@ -1878,6 +1976,9 @@ span.big-green>span>i {
     margin-left: 10px;
     margin-right: 10px;
   }
+  .container .order-image.columns,
+  .container .order-content.columns,
+  .orders .order,
   .container .adjust-product.columns {
     width: 205px;
   }
@@ -1887,6 +1988,12 @@ span.big-green>span>i {
   .container .adjust-product.columns:nth-child(2n+2) {
     margin-left: 10px;
   }
+  .order {
+    float: left;
+  }
+  /* .order:nth-child(2n+2) {
+    margin-left: 10px;
+  } */
 }
 
 @media only screen and (max-width: 479px) {
@@ -1931,6 +2038,7 @@ span.big-green>span>i {
   .half-columns:nth-child(even) {
     margin-left: 10px !important;
   }
+  .container .order-content.columns,
   .widget-card-body .top-side, .widget-card-body .bottom-side, .widget-card-body .left-side, .widget-card-body .right-side, .container .widget-card {
     width: 300px;
   }
@@ -1939,6 +2047,9 @@ span.big-green>span>i {
     margin-left: 10px;
     margin-right: 10px;
   }
+
+  /* .orders .order, */
+  /* .container .order-content.columns, */
   .container .adjust-product.columns {
     width: 145px;
   }
@@ -1947,6 +2058,15 @@ span.big-green>span>i {
   }
   .container .adjust-product.columns:nth-child(2n+2) {
     margin-left: 10px;
+  }
+
+  .order .order-image {
+    float: inherit;
+    text-align: center;
+  }
+  .order .order-image img {
+    margin: 0 auto;
+    width: 300px;
   }
 }
 
