--- a/shops/templates/product/product_reviews.html
+++ b/shops/templates/product/product_reviews.html
@@ -114,83 +114,10 @@
 
 		<div class="container">
 			<div class="sixteen columns">
-				<!-- Tabs Navigation -->
-				<ul class="tabs-nav">
-					<li class="active"><a href="#tab1">Характеристики</a></li>
-					<li><a href="#tab2">Доставка и оплата</a></li>
-					{% if product.shop.rules %}
-					<li><a href="#tab3">Правила возврата и обмена</a></li>
-					{% endif %}
-					<li><a href="#tab4">Отзывы <span class="tab-reviews">({{ product.reviews_count }})</span></a></li>
-				</ul>
-
-				<!-- Tabs Content -->
-				<div class="tabs-container margin-bottom-20">
-
-					<div class="tab-content" id="tab1">
-						<table class="basic-table">
-							<tr>
-								<th>Материал</th>
-								<td>{{ product.material|not_none|add_spaces }}</td>
-							</tr>
-
-							<tr>
-								<th>Размер</th>
-								<td>{{ product.size|not_none }}</td>
-							</tr>
-
-							<tr>
-								<th>Состояние</th>
-								<td>
-									{% if product.condition == 1 %} Представлена полностью готовая работа {% endif %}
-									{% if product.condition == 2 %} Представлена работа под заказ. Для ее выполнения потребуется время {% endif %}
-									{% if product.condition == 3 %} Работа представлена для примера. Повторить работу точь-в-точь невозможно {% endif %}
-								</td>
-							</tr>
-						</table>
-					</div>
-
-					<div class="tab-content" id="tab2">
-						{% with payments=product.shop.payment_options.all %}
-						<div class="eight columns alpha">
-							<h4 class="headline">Оплата</h4><span class="line"></span>
-							<div class="clearfix"></div>
-							{% if payments %}
-							<ul class="list-4 color">
-								{% for payment in payments %}
-									<li>{{ payment }}</li>
-								{% endfor %}
-							</ul>
-							{% endif %}
-							{% if product.shop.payment_other %}
-							<p> {{ product.shop.payment_other }} </p>
-							{% endif %}
-						</div>
-						{% endwith %}
-						{% with deliveries=product.shop.get_delivery_options %}
-						<div class="eight columns omega">
-							<h4 class="headline">Доставка</h4><span class="line"></span>
-							<div class="clearfix"></div>
-							{% if deliveries %}
-							<ul class="list-4 color">
-								{% for delivery in deliveries %}
-									<li>{{ delivery.label }}: {{ delivery.usershopdeliveryoption__price|rub_currency }}</li>
-								{% endfor %}
-							</ul>
-							{% endif %}
-							{% if product.shop.delivery_other %}
-							<p> {{ product.shop.delivery_other }} </p>
-							{% endif %}
-						</div>
-						{% endwith %}
-					</div>
-					{% if product.shop.rules %}
-					<div class="tab-content" id="tab3">
-						<p>{{ product.shop.rules }}</p>
-					</div>
-					{% endif %}
-
-					<div class="tab-content" id="tab4">
+				<div class="widget margin-top-10 margin-bottom-10">
+					<h3 class="headline">Отзывы ({{ product.reviews_count }})</h3><span class="line"></span>
+					<div class="clearfix"></div>
+					<div class="widget-content">
 						<section class="comments">
 							{% if reviews %}
 								<ul>
@@ -222,9 +149,6 @@
 							{% endif %}
 							{% if request.user.is_authenticated %}
 							<a href="#small-dialog" class="popup-with-zoom-anim button color {% if not reviews %}margin-left-0{% endif %}">Добавить отзыв</a>
-							{% if product.reviews_count > 5 %}
-								<a href="{% url 'product-reviews' product.slug %}" class="pull-right">Смотреть все отзывы</a>
-							{% endif %}
 
 							<div id="small-dialog" class="zoom-anim-dialog mfp-hide">
 								<h3 class="headline">Добавить отзыв</h3><span class="line margin-bottom-25"></span>
@@ -240,6 +164,31 @@
 							</div>
 							{% endif %}
 					</section>
+					{% if is_paginated %}
+							<div class="pagination-container margin-top-20">
+									<nav class="pagination">
+											<ul>
+													{% for i in page_obj.paginator.page_range %}
+														{% if page_obj.number == i %}
+															<li><a href="#" class="current-page">{{ i }}</a></li>
+														{% else %}
+															<li><a href="?page={{ i }}">{{ i }}</a></li>
+														{% endif %}
+													{% endfor %}
+											</ul>
+									</nav>
+									<nav class="pagination-next-prev full-width">
+											<ul>
+													{% if page_obj.has_previous %}
+															<li><a href="?page={{ page_obj.previous_page_number }}" class="prev"></a></li>
+													{% endif %}
+													{% if page_obj.has_next %}
+															<li><a href="?page={{ page_obj.next_page_number }}" class="next"></a></li>
+													{% endif %}
+											</ul>
+									</nav>
+							</div>
+					{% endif %}
 					</div>
 				</div>
 			</div>
