--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -3080,8 +3080,8 @@ a.button.color:hover {
 }
 
 .titlebar span {
-    /* font-weight: 300; */
-    /* color: #aaa; */
+    font-weight: 300;
+    color: #aaa;
 }
 
 .titlebar #breadcrumbs ul {
@@ -3225,7 +3225,7 @@ a.button.color:hover {
 
 .pagination ul li {
     display: inline-block;
-    margin: 0;
+    margin: 2px;
     padding: 0;
 }
 
