--- a/theme/templates/blog/blog_post_detail.html
+++ b/theme/templates/blog/blog_post_detail.html
@@ -3,7 +3,8 @@
 
 {% block meta_title %}{{ blog_post.meta_title }}{% endblock %}
 
-{% block meta_keywords %}{% metablock %}
+{% block meta_keywords %}
+{% metablock %}
 {% keywords_for blog_post as tags %}
 {% for tag in tags %}{% if not forloop.first %}, {% endif %}{{ tag }}{% endfor %}
 {% endmetablock %}{% endblock %}
